fixed overflow

--- a/HTML_CSS_JS_Projects/002_random_joke_generator/style.css
+++ b/HTML_CSS_JS_Projects/002_random_joke_generator/style.css
@@ -39,7 +39,7 @@ body {
     height: 50%;
     background-color: blue;
     border-radius: 12px;
-    font-size: 24px;
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
